[package]
name = "narrowlink-agent"
version = "0.2.0"
description = 'Narrowlink Agent'
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']
edition = "2021"

include = [
  "Cargo.toml",
  "LICENSE",
  "sample_agent.yaml",
  "src/**/*",
  "*help.arg",
]

[dependencies]
tokio = { version = "1.33.0", default-features = false, features = [
  "macros",
  "rt",
  "time",
  "rt-multi-thread",
] }
futures-util = { version = "0.3.29", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
serde_yaml = { version = "0.9.27", default-features = false }
uuid = { version = "1.5.0", default-features = false }
sysinfo = { version = "0.29.10", default-features = false }
futures-channel = { version = "0.3.29", features = [
  "sink",
], default-features = false }
udp-stream = { version = "0.0.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
dirs = { version = "5.0.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "fmt",
  "ansi",
  "json",
] }
tracing-appender = { version = "0.2.2", default-features = false }
clap_lex = { version = "0.6.0", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
# base64 = { version = "0.21.0", default-features = false }

narrowlink-types = { version = "0.2.0", default-features = false }
narrowlink-network = { version = "0.2.0", default-features = false }

[target.'cfg(unix)'.dependencies]
daemonize = { version = "0.5.0", default-features = false }
