[package]
name = "narrowlink-client"
version = "0.1.4"
description = "Narrowlink Client"
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']
edition = "2021"

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_client.yaml",
    "src/**/*",
    "*help.arg",
]

[[bin]]
name = "narrowlink"
path = "src/main.rs"

[dependencies]
clap_lex = { version = "0.5.0", default-features = false }
tokio = { version = "1.32.0", features = [
    "macros",
    "rt",
    "io-std",
    "rt-multi-thread",
], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
futures-sink = { version = "0.3.28", features = [
    "alloc",
], default-features = false }
futures-timer = { version = "3.0.2", default-features = false }
tokio-tungstenite = { version = "0.20.0", default-features = false }
tungstenite = { version = "0.20.0", default-features = false }
serde = { version = "1.0.186", features = ["derive"], default-features = false }
serde_json = { version = "1.0.105", default-features = false }
serde_yaml = { version = "0.9.25", default-features = false }
udp-stream = { version = "0.0.9", default-features = false }
regex = { version = "1.9.3", features = ["std"], default-features = false }
either = { version = "1.9.0", default-features = false }
log = { version = "0.4.20", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
proxy-stream = { version = "0.0.2", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
dirs = { version = "5.0.1", default-features = false }
uuid = { version = "1.4.1", features = ["v4"], default-features = false }
chrono = { version = "0.4.26", default-features = false }

narrowlink-types = { version = "0.1.4" }
narrowlink-network = { version = "0.1.4" }

[features]
default = ["rustls"]
rustls = ["narrowlink-network/rustls"]
native-tls = ["narrowlink-network/native-tls"]
native-tls-vendored = ["narrowlink-network/native-tls-vendored"]
