[package]
name = "narrowlink-gateway"
version = "0.1.4"
edition = "2021"
description = "Narrowlink Gateway"
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = "AGPL-3.0"
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_gateway.yaml",
    "src/**/*",
    "*help.arg",
    "templates/*.html",
]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
    "ansi",
    "json",
] }
tracing-appender = { version = "0.2.2" }
dirs = { version = "5.0.1" }
serde_json = { version = "1.0.106" }
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
async-trait = { version = "0.1.73" }
futures-util = { version = "0.3.28" }
askama = { version = "0.12.0" }
pem = { version = "3.0.2" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
either = { version = "1.9.0" }
instant-acme = { version = "0.4.0" }
tokio-rustls = { version = "0.24.1" }
rustls = { version = "0.21.7" }
rustls-pemfile = { version = "1.0.3" }
validator = { version = "0.16.1", features = ["derive"] }
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
x509-parser = { version = "0.15.1" }
clap_lex = { version = "0.5.1" }
rand = { version = "0.8.5", features = ["std"] }
narrowlink-types = { version = "0.1.4" }
narrowlink-network = { version = "0.1.4" }
