[package]
name = "narrowlink-gateway"
version = "0.2.0-git"
edition = "2021"
description = "Narrowlink Gateway"
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = "AGPL-3.0"
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_gateway.yaml",
    "src/**/*",
    "*help.arg",
    "templates/*.html",
]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
    "ansi",
    "json",
] }
tracing-appender = { version = "0.2.2" , default-features = false }
dirs = { version = "5.0.1" , default-features = false }
serde_json = { version = "1.0.107" , default-features = false }
serde_yaml = { version = "0.9.25", default-features = false }
serde = { version = "1.0.188", features = ["derive"], default-features = false }
async-trait = { version = "0.1.73", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
askama = { version = "0.12.0", default-features = false }
pem = { version = "3.0.2", default-features = false, features = ["std"] }
uuid = { version = "1.4.1", default-features = false, features = [
    "v4",
    "serde",
] }
either = { version = "1.9.0", default-features = false }
instant-acme = { version = "0.4.0", default-features = false, features = [
    "hyper-rustls",
] }
tokio-rustls = { version = "0.24.1", default-features = false }
rustls = { version = "0.21.7", default-features = false }
rustls-pemfile = { version = "1.0.3", default-features = false }
validator = { version = "0.16.1", default-features = false, features = [
    "derive",
] }
rcgen = { version = "0.11.1", default-features = false, features = [
    "pem",
    "x509-parser",
] }
x509-parser = { version = "0.15.1", default-features = false }
clap_lex = { version = "0.5.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

narrowlink-types = { version = "0.2.0-git" }
narrowlink-network = { version = "0.2.0-git" }
