[package]
name = "narrowlink-network"
version = "0.2.0-git"
edition = "2021"
description = "Narrowlink Network Library"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[dependencies]
bytes = { version = "1.5.0", default-features = false }
serde = { version = "1.0.190", features = ["derive"], default-features = false }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.29", default-features = false }
tokio = { version = "1.33.0", features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
], default-features = false }
tokio-rustls = { version = "0.24.1", default-features = false }
rustls = { version = "0.21.8", default-features = false }
webpki-roots = { version = "0.25.2", default-features = false }
hyper = { version = "0.14.27", features = [
    "client",
    "http1",
    "tcp",
], default-features = false }
tokio-tungstenite = { version = "0.20.1", default-features = false }
tungstenite = { version = "0.20.1", features = [
    "handshake",
], default-features = false }
chacha20poly1305 = { version = "0.10.1", features = [
    "alloc",
], default-features = false }
quinn = { version = "0.10.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
] }
async-recursion = { version = "1.0.5", default-features = false }
tracing = { version = "0.1.40", default-features = false }
thiserror = { version = "1.0.50", default-features = false }

narrowlink-types = { version = "0.2.0-git" }


[target.'cfg(unix)'.dependencies]
rlimit = { version = "0.10", default-features = false }


[features]
agent = []
client = []
