[package]
name = "narrowlink-network"
version = "0.2.3"
edition = "2021"
description = "Narrowlink Network Library"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[lints]
workspace = true

[dependencies]
bytes = { version = "1.5.0", default-features = false }
serde = { version = "1.0.196", features = ["derive"], default-features = false }
serde_json = { version = "1.0.113", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.30", default-features = false }
tokio = { version = "1.36.0", features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
], default-features = false }
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
tokio-rustls = { version = "0.24.1", default-features = false }
rustls = { version = "0.21.10", default-features = false }
webpki-roots = { version = "0.25.4", default-features = false }
hyper = { version = "0.14.28", features = [
    "client",
    "http1",
    "tcp",
], default-features = false }
tokio-tungstenite = { version = "0.20.1", default-features = false }
tungstenite = { version = "0.20.1", features = [
    "handshake",
], default-features = false }
chacha20poly1305 = { version = "0.10.1", features = [
    "alloc",
], default-features = false }
quinn = { version = "0.10.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
] }
async-recursion = { version = "1.0.5", default-features = false }
tracing = { version = "0.1.40", default-features = false }
thiserror = { version = "1.0.57", default-features = false }

narrowlink-types = { version = "0.2.3", default-features = false }


[target.'cfg(unix)'.dependencies]
rlimit = { version = "0.10", default-features = false }


[features]
agent = []
client = []
