[workspace]
members = ["gateway", "client", "agent", "messages"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
askama = { version = "0.12.1", default-features = false }
async-trait = { version = "0.1.80", default-features = false }
base64 = { version = "0.22", default-features = false }
dashmap = { version = "5.5.3", default-features = false }
env_logger = { version = "0.11.3", default-features = false }
futures = { version = "0.3", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1.2", default-features = false }
hyper-util = { version = "0.1", default-features = false }
instant-acme = { version = "0.4.3", default-features = false }
log = { version = "0.4", default-features = false }
lru = { version = "0.12.3", default-features = false }
pem = { version = "3.0.4", default-features = false }
prost = { version = "0.12", default-features = false }
prost-build = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
quinn = { version = "0.10.2", default-features = false }
rcgen = { version = "0.13.1", default-features = false }
rustls = { version = "0.23", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.37", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tokio-tungstenite = { version = "0.21.0", default-features = false }
tower-service = { version = "0.3", default-features = false }
tungstenite = { version = "0.21.0", default-features = false }
uuid = { version = "1.8", default-features = false }
x509-parser = { version = "0.16.0", default-features = false }
chunkio = { version = "0.0.1", default-features = false }

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce number of codegen units to increase optimizations.
panic = "abort"          # Abort on panic
debug = false            # Strip debug symbols from the binary.
rpath = false            # Do not embed the path to the dynamic library in the binary.
debug-assertions = false # Remove assertions from the binary.
incremental = false      # Disable incremental compilation.
overflow-checks = false  # Disable overflow checks.
strip = true             # Automatically strip symbols from the binary.
