[package]
name = "narrowlink-token-generator"
version = "0.2.0-git"
description = 'Token generator for narrowlink'
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']
edition = "2021"

include = ["Cargo.toml", "LICENSE", "sample_token-generator.yaml", "src/**/*", "*help.arg"]

[[bin]]
name = "narrowlink-token-generator"
path = "src/main.rs"

[dependencies]
jsonwebtoken = { version = "8.3.0" }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = { version = "0.9.25" }
dirs = { version = "5.0.1" }
clap_lex = { version = "0.5.1" }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
thiserror = { version = "1.0.49", default-features = false }

narrowlink-types = { version = "0.2.0-git" }
