[package]
name = "narrowlink-token-generator"
version = "0.2.0"
description = 'Token generator for narrowlink'
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']
edition = "2021"

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_token-generator.yaml",
    "src/**/*",
    "*help.arg",
]

[[bin]]
name = "narrowlink-token-generator"
path = "src/main.rs"

[dependencies]
jsonwebtoken = { version = "9.1.0", default-features = false }
serde = { version = "1.0.192", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9.27", default-features = false }
dirs = { version = "5.0.1", default-features = false }
clap_lex = { version = "0.6.0", default-features = false }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
thiserror = { version = "1.0.50", default-features = false }

narrowlink-types = { version = "0.2.0", default-features = false }
