[package]
name = "narrowlink-token-generator"
version = "0.2.5"
description = 'Token generator for narrowlink'
readme = "README.md"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']
edition = "2021"

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_token-generator.yaml",
    "src/**/*",
    "*help.arg",
]

[[bin]]
name = "narrowlink-token-generator"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
jsonwebtoken = { version = "9.2.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
dirs = { version = "5.0.1", default-features = false }
clap_lex = { version = "0.7.0", default-features = false }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
thiserror = { version = "1.0.58", default-features = false }

narrowlink-types = { version = "0.2.5", default-features = false }
