[package]
name = "narrowlink-types"
version = "0.2.1"
edition = "2021"
description = "Narrowlink Types Library"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[dependencies]
uuid = { version = "1.5.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
jsonwebtoken = { version = "9.1.0", default-features = false }
ipnet = { version = "2.9.0", default-features = false, features = [
  "std",
  "serde",
] }
wildmatch = { version = "2.1.1" }
validator = { version = "0.16.1", default-features = false, features = [
  "derive",
] }
# regex = { version = "1.9.4", default-features = false }
regex-lite = { version = "0.1.5", default-features = false, features = [
  "std","string"
] }
hmac = { version = "0.12.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
thiserror = { version = "1.0.50", default-features = false }
