[package]
name = "narrowlink-types"
version = "0.2.6"
edition = "2021"
description = "Narrowlink Types Library"
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
license = 'MPL-2.0'
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[lints]
workspace = true

[dependencies]
uuid = { version = "1.11.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false }
jsonwebtoken = { version = "9.3.0", default-features = false }
ipnet = { version = "2.10.1", default-features = false, features = [
  "std",
  "serde",
] }
wildmatch = { version = "2.4.0" }
validator = { version = "0.17.0", default-features = false, features = [
  "derive",
] }
# regex = { version = "1.9.4", default-features = false }
regex-lite = { version = "0.1.6", default-features = false, features = [
  "std","string"
] }
hmac = { version = "0.12.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
thiserror = { version = "1.0.69", default-features = false }
