[package]
name = "narrowlink-messages"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
prost-build = { workspace = true }


[lints]
workspace = true
